--- a/styles/index.css
+++ b/styles/index.css
@@ -1,16 +1,17 @@
+
 body {
-    max-width: 1400px;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    margin: auto;
-  }
+  max-width: 1400px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin: auto;
+}
 .container{
 width: 100%;
-height: 630px;
-background-repeat: no-repeat;
-background-image: url(/img/music.jpg); 
-background-size: cover;
+background-image: radial-gradient(#B8E1F2, #30383B);
+height: 710px;
+
+
 }
 
 .nav{
@@ -26,7 +27,9 @@ background-size: cover;
 
 .fas{
   color: #B8E1F2; 
+  font-size: 24px;
 }
+
 
 .fas:hover{
   color: #30383B;
@@ -75,6 +78,51 @@ a:hover{
   align-items: center;
   background-color: #b8e1f21a;
 }
+.content_drummer{
+display: flex;
+
+width: 100%;
+
+
+justify-content: space-around;
+
+
+}
+.wrapper_content_drummer1{
+justify-content: center;
+width: 50%;
+display: flex;
+flex-direction: column;
+align-items: center;
+
+}
+.wrapper_content_drummer2{
+width: 50%;
+}
+.fas{
+margin: 20px;
+}
+
+h1{
+font-family: 'Special Elite', cursive; 
+color: #30383B;
+
+}
+img{
+width: 55%;
+
+align-items: center;
+
+}
+
+
+p{
+color: #30383B;
+font-family: 'Special Elite', cursive; 
+margin: 20px;
+
+}
+
 
 .fab{
   margin: 15px;
@@ -89,9 +137,8 @@ a:hover{
 
 .wrap_footer{
   width: 100%;
-  height: 520px;
   display: flex;
-  align-items: flex-end;
+ align-items: flex-end;
 }
 
 .footer{
@@ -99,9 +146,11 @@ a:hover{
   background-color:#b8e1f254;
   height: 40px;
   display: flex;
-  align-items: center;
-  box-sizing: border-box;
+  margin-top: 40px;
   
+
+  
+
 }
 
 .content_footer{
@@ -109,6 +158,7 @@ a:hover{
  align-items: center;
  justify-content: space-between;
  width: 100%;
+
 }
 
 .wrap_copyright{
@@ -118,3 +168,4 @@ a:hover{
   margin-left: 15px;
 font-family: 'Special Elite', cursive; 
 }
+
