--- a/styles/index.css
+++ b/styles/index.css
@@ -38,12 +38,12 @@ background-size: cover;
   height: 40px;
 }
 
-.fas{
+.mic_nav{
   color: #B8E1F2; 
-  margin-left: 15px;
+  margin-left: 15px; 
 }
 
-.fas:hover{
+.mic_nav:hover{
   color: #30383B;
   transform: scale(1.2);
   transition: ease-in-out 0.2s ;
@@ -103,27 +103,28 @@ a:hover{
 }
 
 .main_title{
-  font-family: 'Special Elite', cursive;
+   font-family: 'Shadows Into Light', cursive; 
   width: 100%;
+  margin-top: 50px;
   text-align: center;
-  margin-top: 100px;
-   color: #30383B;
-  background-color:#b8e1f229;
-  padding: 15px;
+  color: #30383B;
+  color:  #B8E1F2;;
   box-sizing: border-box;
 }
 
 h1{
 font-size: 60px;
+margin: 0;
 }
 
 p{
+  margin: 0;
   font-size: 35px; 
 }
 
 .wrap_footer{
   width: 100%;
-  height: 180px;
+  height: 320px;
   display: flex;
   align-items: flex-end;
   margin-bottom: 15px;
