--- a/styles/_news-slider.scss
+++ b/styles/_news-slider.scss
@@ -1,10 +1,11 @@
+@import '_news-colors';
 h1{
     font-size: 40px;
     margin-left: 10%;
     margin-top: 3%;
+    font-family: $font-family;
 }
 .slider-img{
-    height: 100vh;
     display: flex;
     justify-content: center;
 
