--- a/styles/news-nav.css
+++ b/styles/news-nav.css
@@ -1,12 +1,20 @@
 @import url("https://fonts.googleapis.com/css2?family=Special+Elite&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Fruktur&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Special+Elite&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Fruktur&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Special+Elite&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Fruktur&display=swap");
 h1 {
   font-size: 40px;
   margin-left: 10%;
   margin-top: 3%;
+  font-family: "Special Elite", cursive;
 }
 
 .slider-img {
-  height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -82,6 +90,47 @@ h1 {
 
 .slider-img #img5:checked ~ .m5 {
   margin-left: -400%;
+}
+
+.news-box, .news .img1-news, .news .img2-news, .news .img3-news, .news .img4-news, .news .img5-news {
+  max-width: 1200px;
+  width: 100%;
+  height: 200px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-top: 15px;
+}
+
+.h2, .news .img1-news h2, .news .img2-news h2, .news .img3-news h2, .news .img4-news h2, .news .img5-news h2 {
+  font-family: "Fruktur", cursive;
+  line-height: 24px;
+  font-size: 24px;
+  margin-top: 20px;
+  margin-left: 10px;
+}
+
+.p, .news .img1-news p, .news .img2-news p, .news .img3-news p, .news .img4-news p, .news .img5-news p {
+  font-family: "Poppins", sans-serif;
+  line-height: 24px;
+  font-size: 14px;
+  margin-top: 10px;
+  margin-left: 10px;
+}
+
+.more-btn, .news .img1-news button, .news .img2-news button, .news .img3-news button, .news .img4-news button, .news .img5-news button {
+  width: 100px;
+  height: 30px;
+  position: absolute;
+  right: 14%;
+  bottom: 0;
+}
+
+.news {
+  margin-left: 4%;
 }
 
 * {
