--- a/styles/index.css
+++ b/styles/index.css
@@ -12,23 +12,38 @@ background-repeat: no-repeat;
 background-image: url(/img/music.jpg); 
 background-size: cover;
 }
+.wrap_nav{
+  display: flex;
+  margin-top: 15px;
+}
 
-.nav{
-  width: 100%;
+.nav_links{
+  width: 70%;
   background-color:#b8e1f254;
   box-sizing: border-box;
   display: flex;
-  justify-content: space-around;
+  justify-content:space-between;
   align-items: center;
-  margin-top: 15px;
+  height: 40px;
+  font-size: 17px;
+  
+}
+.nav_buttons{
+  width: 30%;
+  background-color:#b8e1f254;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: end;
+  align-items: center;
   height: 40px;
 }
 
-.fas{
+.mic_nav{
   color: #B8E1F2; 
+  margin-left: 15px; 
 }
 
-.fas:hover{
+.mic_nav:hover{
   color: #30383B;
   transform: scale(1.2);
   transition: ease-in-out 0.2s ;
@@ -36,7 +51,6 @@ background-size: cover;
 
 a{
   color: #B8E1F2;
-  font-size: 23px;
   text-decoration: none;
   font-family: 'Special Elite', cursive;
 }
@@ -45,17 +59,19 @@ a:hover{
   color: #30383B;
   transform: scale(1.2);
   transition: ease-in-out 0.2s ;
+  
 }
 .btn{
-  background-color:#30383B;
+  background-color:#30383b7a;
   width: 100px;
   height: 40px;
   border-radius: 25px;
   border: 2px solid #B8E1F2;
   font-family: 'Special Elite', cursive;
-  font-size: 18px;
+  font-size: 17px;
   color: #B8E1F2;
- 
+  margin: 5px;
+ margin-right: 15px;
 }
 
 .btn:hover{
@@ -73,10 +89,11 @@ a:hover{
   display: flex;
   justify-content:center;
   align-items: center;
-  background-color: #b8e1f21a;
+   background-color: #b8e1f21a; 
 }
 
 .fab{
+  font-size: 25px;
   margin: 15px;
   color: #B8E1F2;
 }
@@ -85,13 +102,35 @@ a:hover{
   color: #30383B;
   transform: scale(1.2);
   transition: ease-in-out 0.2s ;
+  
+}
+
+.main_title{
+   font-family: 'Shadows Into Light', cursive; 
+  width: 100%;
+  margin-top: 50px;
+  text-align: center;
+  color: #30383B;
+  color:  #B8E1F2;;
+  box-sizing: border-box;
+}
+
+h1{
+font-size: 60px;
+margin: 0;
+}
+
+p{
+  margin: 0;
+  font-size: 35px; 
 }
 
 .wrap_footer{
   width: 100%;
-  height: 520px;
+  height: 320px;
   display: flex;
   align-items: flex-end;
+  margin-bottom: 15px;
 }
 
 .footer{
@@ -101,7 +140,6 @@ a:hover{
   display: flex;
   align-items: center;
   box-sizing: border-box;
-  
 }
 
 .content_footer{
@@ -118,3 +156,4 @@ a:hover{
   margin-left: 15px;
 font-family: 'Special Elite', cursive; 
 }
+
