--- a/style/styles.css
+++ b/style/styles.css
@@ -15,6 +15,33 @@ body {
   width: 100%;
   margin: auto;
 }
+
+@media screen and (min-width: 600px) {
+  a {
+    font-size: 17px;
+  }
+  .btn {
+    font-size: 17px;
+    width: 100px;
+    height: 40px;
+    border-radius: 25px;
+    border-width: 2px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  a {
+    font-size: 10px;
+  }
+  .btn {
+    font-size: 10px;
+    width: 70px;
+    height: 30px;
+    border-radius: 12px;
+    border-width: 1px;
+  }
+}
+
 .container{
 width: 100%;
 height: 630px;
@@ -63,9 +90,8 @@ transform: scale(1.2);
 transition: ease-in-out 0.2s ;
 }
 
-a{
+a {
 color: #B8E1F2;
-font-size: 17px;
 text-decoration: none;
 font-family: 'Special Elite', cursive;
 }
@@ -77,13 +103,8 @@ transition: ease-in-out 0.2s ;
 }
 .btn{
   background-color: rgba(48, 56, 59, 0.48);
-  width: 100px;
-  height: 40px;
   font-family: "Special Elite", cursive;
-  font-size: 17px;
   color: rgb(184, 225, 242);
-  border-radius: 25px;
-  border-width: 2px;
   border-style: solid;
   border-color: rgb(184, 225, 242);
   border-image: initial;
