--- a/styles/_news-news.scss
+++ b/styles/_news-news.scss
@@ -2,7 +2,8 @@
 .news-box{
     max-width: 1200px;
     width: 100%;
-    height: 200px;
+    max-height: 240px;
+    height: 100%;
     display: flex;
     justify-content: space-between;
     margin-top: 15px;
@@ -12,7 +13,7 @@
     font-family: $font-family-fruktur;
     line-height: 24px;
     font-size: 24px;
-    margin-top: 20px;
+    margin-top: 15px;
     margin-left: 10px;
 }
 .p{
@@ -22,78 +23,27 @@
     margin-top: 10px;
     margin-left: 10px;
 }
-// .more-btn{
-//     width: 100px;
-//     height: 30px;
-//     position: absolute;
-//     right: 14%;
-//     bottom: 0;
-// }
+.more-btn{
+    position: absolute;
+    bottom: 3%;
+    left: 30%;
+}
 .news{
     margin-left: 4%;
-    .img1-news{
+    .img-news{
         @extend .news-box;
+        // @extend .overlay;
+
+        &:hover{
+            padding: 10px;
+            box-shadow: 5px 10px 8px 10px #888888
+        }
 
         h2{
             @extend .h2;
         }
         p{
             @extend .p;
-        }
-        button{
-            @extend .more-btn;
-        }
-    }
-    .img2-news{
-        @extend .news-box;
-
-        h2{
-            @extend .h2;
-        }
-        p{
-            @extend .p;
-        }
-        button{
-            @extend .more-btn;
-        }
-    }
-    .img3-news{
-        @extend .news-box;
-
-        h2{
-            @extend .h2;
-        }
-        p{
-            @extend .p;
-        }
-        button{
-            @extend .more-btn;
-        }
-    }
-    .img4-news{
-        @extend .news-box;
-
-        h2{
-            @extend .h2;
-        }
-        p{
-            @extend .p;
-        }
-        button{
-            @extend .more-btn;
-        }
-    }
-    .img5-news{
-        @extend .news-box;
-
-        h2{
-            @extend .h2;
-        }
-        p{
-            @extend .p;
-        }
-        button{
-            @extend .more-btn;
         }
     }
 }
