--- a/styles/news-nav.scss
+++ b/styles/news-nav.scss
@@ -1,6 +1,7 @@
 @import '_news-colors';
 @import '_news-slider';
 @import '_news-news';
+@import '_news-footer';
 *{
     margin: 0;
     padding: 0;
@@ -13,7 +14,6 @@
 body{
     background-color: #eeeeee;
 }
-
 nav{
     .nav{
         width: 100%;
