--- a/styles/news-nav.css
+++ b/styles/news-nav.css
@@ -7,6 +7,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Special+Elite&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Fruktur&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Special+Elite&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Fruktur&display=swap");
 h1 {
   font-size: 40px;
   margin-left: 10%;
@@ -22,31 +25,26 @@ h1 {
       -ms-flex-pack: center;
           justify-content: center;
 }
-
 .slider-img .slider {
   position: relative;
   width: 50%;
   overflow: hidden;
 }
-
 .slider-img .slider .images {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   width: 100%;
 }
-
 .slider-img .slider .images img {
   height: 400px;
   width: 100%;
   -webkit-transition: all 0.15s ease;
   transition: all 0.15s ease;
 }
-
 .slider-img .slider .images input {
   display: none;
 }
-
 .slider-img .dots {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -56,7 +54,6 @@ h1 {
           justify-content: center;
   margin: 5px;
 }
-
 .slider-img .dots label {
   width: 20px;
   height: 20px;
@@ -67,35 +64,30 @@ h1 {
   transition: all 0.15s ease;
   margin: 5px;
 }
-
 .slider-img .dots label:hover {
   background-color: #333;
 }
-
 .slider-img #img1:checked ~ .m1 {
   margin-left: 0;
 }
-
 .slider-img #img2:checked ~ .m2 {
   margin-left: -100%;
 }
-
 .slider-img #img3:checked ~ .m3 {
   margin-left: -200%;
 }
-
 .slider-img #img4:checked ~ .m4 {
   margin-left: -300%;
 }
-
 .slider-img #img5:checked ~ .m5 {
   margin-left: -400%;
 }
 
-.news-box, .news .img1-news, .news .img2-news, .news .img3-news, .news .img4-news, .news .img5-news {
+.news-box, .news .img-news {
   max-width: 1200px;
   width: 100%;
-  height: 200px;
+  max-height: 240px;
+  height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -105,15 +97,15 @@ h1 {
   margin-top: 15px;
 }
 
-.h2, .news .img1-news h2, .news .img2-news h2, .news .img3-news h2, .news .img4-news h2, .news .img5-news h2 {
+.h2, .news .img-news h2 {
   font-family: "Fruktur", cursive;
   line-height: 24px;
   font-size: 24px;
-  margin-top: 20px;
+  margin-top: 15px;
   margin-left: 10px;
 }
 
-.p, .news .img1-news p, .news .img2-news p, .news .img3-news p, .news .img4-news p, .news .img5-news p {
+.p, .news .img-news p {
   font-family: "Poppins", sans-serif;
   line-height: 24px;
   font-size: 14px;
@@ -121,16 +113,69 @@ h1 {
   margin-left: 10px;
 }
 
-.more-btn, .news .img1-news button, .news .img2-news button, .news .img3-news button, .news .img4-news button, .news .img5-news button {
-  width: 100px;
-  height: 30px;
+.more-btn {
   position: absolute;
-  right: 14%;
-  bottom: 0;
+  bottom: 3%;
+  left: 30%;
 }
 
 .news {
   margin-left: 4%;
+}
+.news .img-news:hover {
+  padding: 10px;
+  -webkit-box-shadow: 5px 10px 8px 10px #888888;
+          box-shadow: 5px 10px 8px 10px #888888;
+}
+.wrap_footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  margin-top: 3%;
+}
+.wrap_footer .footer {
+  width: 100%;
+  background-color: #999;
+  height: 60px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+.wrap_footer .footer .content_footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+}
+.wrap_footer .footer .content_footer .wrap_copyright {
+  width: 75%;
+  font-size: 13px;
+  color: #B8E1F2;
+  margin-left: 15px;
+}
+.wrap_footer .footer .wrap_icons {
+  max-width: 260px;
+  height: 100%;
+  margin-left: 5%;
+}
+.wrap_footer .footer .wrap_icons a {
+  margin-left: 40px;
+  font-size: 1.2em;
+  color: #B8E1F2;
+}
+.wrap_footer .footer .wrap_icons a:hover {
+  font-size: 1.8em;
 }
 
 * {
@@ -155,7 +200,6 @@ nav .nav {
   margin-top: 1%;
   background-color: #999999;
 }
-
 nav .nav .logo {
   width: 50px;
   height: 100%;
@@ -170,17 +214,14 @@ nav .nav .logo {
           align-items: center;
   margin-left: 5%;
 }
-
 nav .nav .logo a {
   list-style-type: none;
 }
-
 nav .nav .logo a i {
   font-size: 2.4em;
   color: #4c4c4c;
   text-decoration: none;
 }
-
 nav .nav .nav-list {
   max-width: 500px;
   width: 100%;
@@ -197,21 +238,18 @@ nav .nav .nav-list {
           align-items: center;
   list-style-type: none;
 }
-
 nav .nav .nav-list li a {
-  font-family: 'Special Elite', cursive;
+  font-family: "Special Elite", cursive;
   text-decoration: none;
   color: #30383B;
   font-size: 22px;
-  -webkit-transition: .3s;
-  transition: .3s;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
 }
-
 nav .nav .nav-list li a:hover {
   font-size: 25px;
   text-shadow: 1px 1px 1px #000;
 }
-
 nav .nav .sign {
   max-width: 260px;
   width: 100%;
@@ -227,7 +265,6 @@ nav .nav .sign {
           align-items: center;
   margin-left: 20%;
 }
-
 nav .nav .sign button {
   width: 120px;
   height: 36px;
@@ -239,10 +276,8 @@ nav .nav .sign button {
   border-radius: 20px;
   text-align: center;
 }
-
 nav .nav .sign button:hover {
   background-color: #b8e1f254;
   color: #000;
   border: 1px solid #333;
 }
-/*# sourceMappingURL=news-nav.css.map */
