--- a/styles/_news-news.scss
+++ b/styles/_news-news.scss
@@ -1,4 +1,4 @@
-@import '_news-colors';
+@import '_news-fonts';
 .news-box{
     max-width: 1200px;
     width: 100%;
@@ -7,6 +7,7 @@
     display: flex;
     justify-content: space-between;
     margin-top: 15px;
+    margin-bottom: 40px;
 
 }
 .h2{
@@ -23,20 +24,15 @@
     margin-top: 10px;
     margin-left: 10px;
 }
-.more-btn{
-    position: absolute;
-    bottom: 3%;
-    left: 30%;
-}
+
 .news{
     margin-left: 4%;
     .img-news{
         @extend .news-box;
-        // @extend .overlay;
 
         &:hover{
             padding: 10px;
-            box-shadow: 5px 10px 8px 10px #888888
+            box-shadow: 5px 10px 8px 10px #888888;
         }
 
         h2{
