--- a/styles/_news-footer.scss
+++ b/styles/_news-footer.scss
@@ -1,13 +1,14 @@
 @import '_news-fonts';
 
 .wrap_footer{
-    width: 100%;
-    height: 20%;
-    display: flex;
-    align-items: flex-end;
-    margin-bottom: 15px;
+    // width: 100%;
+    // height: 20%;
+    // display: flex;
+    // align-items: flex-end;
+    
 
    .footer{
+       margin-bottom: 15px;
        width: 100%;
        background-color: #b8e1f254;
        height: 40px;
@@ -17,13 +18,13 @@
     // I used it before
 
        .ontent_footer{
-           display: flex;
-           align-items: center;
-           justify-content: space-between;
-           width: 100%;
+        //    display: flex;
+        //    align-items: center;
+        //    justify-content: space-between;
+        //    width: 100%;
 
            .wrap_copyright{
-               width: 75%;
+            //    width: 75%;
                font-size: 13px;
                color: #88e1f2;
                margin-left: 15px;
