Changed sign btn justify content

--- a/styles/_news-nav.scss
+++ b/styles/_news-nav.scss
@@ -47,7 +47,7 @@ nav{
        .nav_buttons{
            width: 30%;
            display: flex;
-           justify-content: space-around;
+           justify-content: end;
            align-items: center;
 
            .btn{
