--- a/styles/news.scss
+++ b/styles/news.scss
@@ -1,5 +1,5 @@
 body{
-    background-image: linear-gradient(90deg, #333, 	#D3D3D3);;
+    background-image: linear-gradient(90deg, #333, 	#D3D3D3);
 }
 @import '_news-fonts';
 @import '_news-nav';
