--- a/styles/_news-slider.scss
+++ b/styles/_news-slider.scss
@@ -12,6 +12,16 @@ main{
         font-family: $font-family-fruktur;
     }
 }
+@media screen and (max-width: 800px) {
+   main{
+      h1{
+         font-size: 24px
+      }
+      p{
+         font-size: 14px
+      }
+   }
+}
 
 @import url("https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css");
 @import url("https://static.fontawesome.com/css/fontawesome-app.css");
@@ -139,20 +149,7 @@ main{
 
             height:50px;
             transition:.5s cubic-bezier(0.05, 0.61, 0.41, 0.95);
-            // .icon {
-            //    display:flex;
-            //    flex-direction:row;
-            //    justify-content:center;
-            //    align-items:center;
-               
-            //    min-width:40px;
-            //    max-width:40px;
-            //    height:40px;
-            //    border-radius:100%;
 
-            //    background-color:white;
-            //    color:var(--defaultBackground);
-            // }
             .info {
                display:flex;
                flex-direction:column;
@@ -171,9 +168,6 @@ main{
                .main {
                   font-weight:bold;
                   font-size:1.2rem;
-               }
-               .sub {
-                  transition-delay:.1s;
                }
             }
          }
