--- a/styles/about-us.css
+++ b/styles/about-us.css
@@ -3,7 +3,7 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: white;
+    background: linear-gradient(90deg, #34313f, #d6d3d3);
 }
 
 .wrap_nav {
@@ -98,159 +98,51 @@ a:hover {
     transition: ease-in-out 0.2s;
 }
 
-.wrap_nav {
-    display: flex;
-    margin-top: 15px;
-}
-
-.nav_links {
-    width: 70%;
-    background-color: #b8e1f254;
-    box-sizing: border-box;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 40px;
-    font-size: 17px;
-}
-
-.nav_buttons {
-    width: 30%;
-    background-color: #b8e1f254;
-    box-sizing: border-box;
-    display: flex;
-    justify-content: end;
-    align-items: center;
-    height: 40px;
-}
-
-.mic_nav {
-    color: #B8E1F2;
-    margin-left: 15px;
-}
-
-.mic_nav:hover {
-    color: #30383B;
-    transform: scale(1.2);
-    transition: ease-in-out 0.2s;
-}
-
-a {
-    color: #B8E1F2;
-    text-decoration: none;
-    font-family: 'Special Elite', cursive;
-}
-
-a:hover {
-    color: #30383B;
-    transform: scale(1.2);
-    transition: ease-in-out 0.2s;
-}
-
-.btn {
-    background-color: #30383b7a;
-    width: 100px;
-    height: 40px;
-    border-radius: 25px;
-    border: 2px solid #B8E1F2;
-    font-family: 'Special Elite', cursive;
-    font-size: 17px;
-    color: #B8E1F2;
-    margin: 5px;
-    margin-right: 15px;
-}
-
-.btn:hover {
-    cursor: pointer;
-    transition: ease-in-out 0.3s;
-    color: #4c4c4c;
-    background-color: #b8e1f254;
-    border: 1px solid #4c4c4c;
-}
-
-.icons {
+.main_title {
+    font-family: 'Shadows Into Light', cursive;
     width: 100%;
-    box-sizing: border-box;
-    height: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #b8e1f21a;
-}
-
-.fab {
-    font-size: 25px;
-    margin: 15px;
-    color: #B8E1F2;
-}
-
-.fab:hover {
+    margin-top: 50px;
+    text-align: center;
     color: #30383B;
-    transform: scale(1.2);
-    transition: ease-in-out 0.2s;
+    color: #B8E1F2;
+    box-sizing: border-box;
+    height: 4vh;
+}
+
+h1 {
+    font-size: 60px;
+    margin: 0;
+}
+
+.main_title p {
+    margin: 0;
+    font-size: 35px;
 }
 
 #hero {
     width: 100%;
-    height: 75vh;
-    /* background: url(./images/music-598176_1280.jpg) top left; */
+    height: 50vh;
     background-size: cover;
     position: relative;
 }
 
-#hero:before {
+
+/* #hero:before {
     content: "";
-    /* background: rgba(255, 255, 255, 0.6); */
+   
     position: absolute;
     bottom: 0;
     top: 0;
     left: 0;
     right: 0;
-}
+} */
 
 #hero .container {
     position: relative;
 }
 
-#hero h1 {
-    margin: 0;
-    font-size: 36px;
-    font-weight: 700;
-    line-height: 56px;
-    font-family: "Poppins", sans-serif;
-}
-
-text {
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    letter-spacing: 10px;
-    stroke: #6fc1da;
-    font-size: 100px;
-    font-weight: 700;
-    stroke-width: 3;
-    animation: textAnimate 5s infinite alternate;
-}
-
-@keyframes textAnimate {
-    0% {
-        stroke-dasharray: 0 50%;
-        stroke-dashoffset: 20%;
-        fill: hsl(180, 12%, 41%)
-    }
-    100% {
-        stroke-dasharray: 50% 0;
-        stroke-dashoffstet: -20%;
-        fill: hsla(189, 68%, 75%, 0%)
-    }
-}
-
-#hero h2 {
-    margin: 5px 0 30px 0;
-    font-size: 24px;
-    font-weight: 400;
-}
-
 #hero .btn-get-started {
-    font-family: "Roboto", sans-serif;
+    font-family: 'Special Elite', cursive;
     text-transform: uppercase;
     font-weight: 500;
     font-size: 14px;
@@ -260,11 +152,11 @@ text {
     border-radius: 4px;
     transition: 0.5s;
     color: #fff;
-    background: #8ea6b1;
+    background: #34313f;
 }
 
 #hero .btn-get-started:hover {
-    background: #8ea6b1;
+    background: #34313f;
 }
 
 #hero .btn-watch-video {
@@ -302,15 +194,6 @@ text {
     #hero {
         height: 100vh;
     }
-    #hero h1 {
-        font-size: 28px;
-        line-height: 36px;
-    }
-    #hero h2 {
-        font-size: 18px;
-        line-height: 24px;
-        margin-bottom: 30px;
-    }
     #hero .btn-get-started,
     #hero .btn-watch-video {
         font-size: 13px;
@@ -329,14 +212,14 @@ text {
 --------------------------------------------------------------*/
 
 .featured-services {
-    margin: 20px;
+    margin-bottom: 30px;
 }
 
 .featured-services .icon-box {
     padding: 30px;
     position: relative;
     overflow: hidden;
-    background: #fff;
+    background: rgb(236, 234, 234);
     box-shadow: 0 0 29px 0 rgba(68, 88, 144, 0.12);
     transition: all 0.3s ease-in-out;
     border-radius: 8px;
@@ -346,7 +229,7 @@ text {
 .featured-services .icon-box::before {
     content: "";
     position: absolute;
-    background: #8ea6b1;
+    background: #34313f;
     right: 0;
     left: 0;
     bottom: 0;
@@ -356,14 +239,15 @@ text {
 }
 
 .featured-services .icon-box:hover::before {
-    background: #8ea6b1;
+    background: #34313f;
     top: 0;
     border-radius: 0px;
 }
 
-.featured-services .icon {
+
+/* .featured-services .icon {
     margin-bottom: 15px;
-}
+} */
 
 .featured-services .icon i {
     font-size: 48px;
@@ -386,6 +270,7 @@ text {
     font-size: 15px;
     line-height: 28px;
     margin-bottom: 0;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .featured-services .icon-box:hover .title a,
@@ -402,12 +287,13 @@ text {
 --------------------------------------------------------------*/
 
 .about {
-    margin: 20px;
+    margin-bottom: 20px;
 }
 
 .about .content h3 {
     font-weight: 600;
     font-size: 26px;
+    font-family: 'Special Elite', cursive;
 }
 
 .about .content ul {
@@ -435,20 +321,28 @@ text {
     border-radius: 50px;
 }
 
-.about .content ul h5 {
+h5 {
     font-size: 18px;
+    font-family: 'Special Elite', cursive;
 }
 
-.about .content ul p {
-    font-size: 15px;
+.about .content p {
+    font-size: 16px;
+    font-family: 'Montserrat', sans-serif;
 }
 
+
+/* 
 .about .content p:last-child {
     margin-bottom: 0;
-}
+} */
 
 
 /*six-card-images*/
+
+.musicians {
+    margin-bottom: 30px;
+}
 
 .cards {
     display: flex;
@@ -465,7 +359,6 @@ text {
 .card {
     margin: 10px;
     padding: 0;
-    /* overflow: hidden; */
 }
 
 .card-img-top {
@@ -476,9 +369,6 @@ text {
     height: 100%;
     top: 0;
     left: 0;
-}
-
-.card .card-img-top {
     transform: scale(1);
     transition: .4s ease-in-out;
 }
@@ -491,8 +381,13 @@ text {
     overflow: hidden;
 }
 
+.card p {
+    font-size: 15px;
+    font-family: 'Montserrat', sans-serif;
+}
+
 .card-body {
-    background-color: #f9f9f9;
+    background-color: rgb(236, 234, 234);
 }
 
 
